add mute methods

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="controls">
           <h1>Hi-hat</h1>
           <button data-track="0" class="mute hihat-volume">
-            <div class="fas fa-volume-mute"></div>
+            <i class="fa-solid fa-volume-high"></i>
           </button>
           <select name="hihat-select" id="hihat-select">
             <option value="./sounds/hihat-acoustic01.wav">
@@ -47,7 +47,7 @@
         <div class="controls">
           <h1>Snare</h1>
           <button data-track="0" class="mute snare-volume">
-            <div class="fas fa-volume-mute"></div>
+            <i class="fa-solid fa-volume-high"></i>
           </button>
           <select name="snare-select" id="snare-select">
             <option value="./sounds/snare-acoustic01.wav">
@@ -81,7 +81,7 @@
         <div class="controls">
           <h1>Kick</h1>
           <button data-track="0" class="mute kick-volume">
-            <div class="fas fa-volume-mute"></div>
+            <i class="fa-solid fa-volume-high"></i>
           </button>
           <select name="kick-select" id="kick-select">
             <option value="./sounds/kick-acoustic01.wav">Acoustic Kick</option>
@@ -113,7 +113,7 @@
         <div class="controls">
           <h1>Crash</h1>
           <button data-track="0" class="mute crash-volume">
-            <div class="fas fa-volume-mute"></div>
+            <i class="fa-solid fa-volume-high"></i>
           </button>
           <select name="crash-select" id="crash-select">
             <option value="./sounds/crash-acoustic.wav">Acoustic Crash</option>
@@ -149,11 +149,10 @@
     <audio src="./sounds/crash-acoustic.wav" class="crash-sound"></audio>
 
     <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/js/all.min.js"
-      integrity="sha512-rpLlll167T5LJHwp0waJCh3ZRf7pO6IT1+LZOhAyP6phAirwchClbTZV3iqL3BMrVxIYRbzGTpli4rfxsCK6Vw=="
+      src="https://kit.fontawesome.com/dce7e5f9eb.js"
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     ></script>
+
     <script src="./app.js"></script>
   </body>
 </html>
